<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Simple strings. -->
    <string name="dns_app">DNS.com Mobile</string>
    <string name="main_menu">Main Menu</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
	<string name="input_label_filter">Filter</string>
    <string name="main_label">DNS.com Mobile</string>
    <string name="domainViewLabel">Domain List</string>
    <string name="domainGroupListLabel">Domain Group List</string>
    <string name="geoGroupLabel">Geo-Group List</string>
    <string name="domain_selection_button">Domains</string>
    <string name="domain_groups_button_text">Domain Groups</string>
    <string name="geo_groups_button_text">Geo-Groups</string>
    <string name="record_type_label">Type</string>
    <string name="name_servers_button_text">Name Servers</string>
    <string name="tools_button_text">Tools</string>
    <string name="dns_mobile_description">Manage your DNS.com domain settings from your mobile device.</string>
    <string name="new_entry">[New]</string>
    <string name="domains_list_view_label">My Domains</string>
    <string name="open_web_confirmation_title">Confirmation&#8230;</string>
    <string name="open_web_confirmation_msg">Visit DNS.com on the web?</string>
	<string name="open_web_confirmation_yes">Yes</string>
	<string name="open_web_confirmation_no">No</string>
	<string name="dns_configuration_label">DNS.com Configuration</string>
	<string name="auth_token_label">Auth Token</string>
	<string name="auth_token_input_hint">Auth Token</string>
	<string name="use_sandbox_config_label">Use Sandbox</string>
	<string name="configuration_save_button_label">Save</string>
	<string name="configuration_token_dialog_message">Enter Account Token</string>
	<string name="configuration_token_dialog_title">Enter the authorization token from the Settings->API Settings page on the DNS.com web site.</string>
	<string name="configuration_sandbox_summary">Checking this box will cause the application to use the DNS.com sandbox instead of live production data. You can use this to test access to DNS.com from the app without making real changes.</string>
	<string name="screen_bottom_help_text">Long press to delete items</string>
	<string name="domain_groups_list_label">My Domain Groups</string>
	<string name="rr_type_selection_label">Record Type</string>
	<string name="rr_answer_label">Address</string>
	<string name="rr_rname_label">Contact Address</string>
	<string name="rr_ttl_label">TTL (in seconds)</string>
	<string name="rr_details_header_label">Details For: </string>
	<string name="rr_srv_weight_label">Weight</string>
	<string name="rr_srv_port_label">Port Number (0 &#8212; 65535)</string>
	<string name="priority_label">Priority</string>
	<string name="rr_retry_label">Retry Interval (in seconds)</string>
	<string name="rr_expire_label">Expire</string>
	<string name="rr_min_label">Minimum TTL (in seconds)</string>
	<string name="rr_details_save">Save</string>
	<string name="main_menu_my_domains">My Domains</string>
	<string name="main_menu_my_domain_groups">My Domain Groups</string>
	<string name="main_menu_my_geogroups">My Geo-Groups</string>
	<string name="main_menu_my_nameservers">My Nameservers</string>
	<string name="main_menu_dns_tools">DNS Tools</string>
	<string name="dns_tools_whois">WHOIS Lookup</string>
	<string name="dns_tools_dig">DIG Lookup</string>
	<string name="dns_tools_header_label">DNS Tools</string>
	<string name="dns_tool_whois_label">WHOIS</string>
	<string name="whois_domain_name_label">Enter Domain Name</string>
	<string name="whois_lookup_button">Lookup</string>
	<string name="whois_domain_input_hint">domain.tld</string>
	<string name="dig_fqdn_label">Enter Host Name</string>
	<string name="dig_lookup_button">Lookup</string>
	<string name="dig_fqdn_input_hint">host.domain.tld</string>
	<string name="dig_activity_header">DNS DIG</string>
	<string name="dig_name_server_select_label">Name Server</string>
	<string name="dig_use_custom_ns_button_label">Use</string>
	<string name="dig_config_servers_label">Manage Name Servers</string>
	<string name="dig_config_delete_title">Delete Confirmation</string>
	<string name="dig_config_delete_message">Are you sure you want to delete NAMESERVER from the name server list?</string>
	<string name="dig_config_delete_positive">Yes</string>
	<string name="dig_config_delete_negative">No</string>
	<string name="dig_edit_server_dialog_title">Add Server</string>
	<string name="dig_add_server_name_label">Name</string>
	<string name="dig_add_server_addr_label">Address</string>
	<string name="string_save">Save</string>
	<string name="string_cancel">Cancel</string>
	<string name="string_ok">OK</string>
	<string name="rrRefreshLabel">Refresh Interval</string>
	<string name="rr_update_saved_title">Record Saved</string>
	<string name="rr_update_saved_body">Changes for this record were saved successfully.</string>
	<string name="add_domain_header">New Domain</string>
	<string name="domain_name">Domain Name</string>
	<string name="example_host_name">host.example.tld</string>
	<string name="example_domain_name">domain.tld</string>
	<string name="example_rname">user@example.tld</string>
	<string name="slave_zone">Set As Slave?</string>
	<string name="master_label">Master Server Address</string>
	<string name="example_ip_address">192.168.123.112</string>
	<string name="add_domain_input_error_title">Domain Form Incomplete</string>
	<string name="add_domain_input_error_message">One or more of the required fields are not correct.</string>
	<string name="view_records_button_label">Records</string>
	<string name="new_host_name_header">New Host</string>
	<string name="new_host_name_label">"New Host's Name"</string>
	<string name="host_delete_dialog_title">Delete the record </string>
	<string name="host_delete_dialog_message">Press &quot;Yes&quot; to confirm delete of the record or cancel to return to the list.</string>
	<string name="yes">Yes</string>
	<string name="cancel">Cancel</string>
	<string name="dns_logo_description">DNS.com Logo</string>
	<string name="warning">WARNING!!</string>
	<string name="dnsdroid_code_state_warning">This app is not yet even Alpha quality. Many features are not yet implemented and many of the ones which are will cause a force close. Do not complain about the state of the app as we know it is not functional yet.</string>
	<string name="ok">OK</string>
	<string name="code_state_decline">Get me outta here!</string>
	<string name="rr_list_delete_dialog_title">Are you sure?</string>
	<string name="rr_list_delete_dialog_message">Pressing OK will delete the selected record and this cannot be undone.</string>
	<string name="rr_delete_failed_title">Failed to delete resource record</string>
	<string name="rr_delete_failed_message">There was an error while trying to delete the item ||REPLACE||. Please check your Internet connection and/or try again later.</string>
	<string name="default_value_1">1</string>
	<string name="default_value_minTtl">172800</string>
	<string name="default_value_ttl">3600</string>
	<string name="default_value_expire">3600000</string>
	<string name="default_value_priority">5</string>
	<string name="default_value_srv_port">5222</string>
	<string name="default_value_retry">7200</string>
	<string name="domain_group_null_alert_title">The Domain Group name is null!!</string>
	<string name="domain_group_null_alert_message">Somehow, you got to this screen with a blank domain group name. Press \'OK\' to go back.</string>
	<string name="group_member_api_failed_title">Data error</string>
	<string name="group_member_api_failed_message">Unable to retrieve the domain group members list from the DNS.com site. Press \'OK\' to go back and try again.</string>
	<string name="group_member_activity_label">Domain Group:</string>
	<string name="group_member_delete_dialog_title">Confirm Removal From Group</string>
	<string name="group_member_delete_dialog_message">will be removed from the group if you press \'OK\'. The records which are associated with this domain will be put back into active service and host/record changes will have to be made on that domain independent of the group.</string>
	<string name="remove_group_member_fail_title">Member Removal Failed</string>
	<string name="remove_group_member_fail_message">was not successfully removed from the domain group</string>
	<string name="add_group_member_fail_title">Member Addition Failed</string>
	<string name="add_group_member_fail_message">was not added to the domain group</string>
	<string name="add_group_member_success_title">Member Addition Complete</string>
	<string name="add_group_member_success_message">was successfully added to the domain group</string>
	<string name="dns_mobile_app_description">Manage your DNS.com domains, domain groups, and GeoDNS right from your Android device.</string>
	<string name="domain_group_add_busy_title">Adding</string>
	<string name="nothing_here_yet">Nothing Here Yet!!</string>
	<string name="create_domain_group_name_label">New Domain Group Name</string>
	<string name="create_new_group_button">Create</string>
	<string name="saving">Saving&#8230;</string>
	<string name="deleting">Deleting</string>
	<string name="loading">Loading</string>
	<string name="domain_group_name_too_short_title">Name Too Short</string>
	<string name="domain_group_name_too_short_message">Domain group names must be at least 4 characters in length. Press \'OK\' to go back and fix your input.</string>
	<string name="blank"></string>
	<string name="group_use_custom_ns_label">Use custom name servers?</string>
	<string name="api_request_failed">API request failed.</string>
	<string name="error">Error</string>
	<string name="domain_group_created_title">Domain Group Created</string>
	<string name="domain_group_created_message">Your domain group was created successfully.</string>
	<string name="refresh_button_description">Refresh</string>
	<string name="create_new_domain_label">Create New Domain</string>
	<string name="create_new_group_label">Create New Domain Group</string>
	<string name="geo_groups_header">Geo-Location Groups</string>
	<string name="delete">Delete</string>
	<string name="domain_group_delete_confirmation">By pressing OK, the selected domain group will be deleted if it is empty. If it is not empty, the delete will fail.</string>
	<string name="dg_delete_failed_title">Failed to delete domain group</string>
	<string name="dg_delete_failed_message">The domain group was not deleted for the following reason</string>
	<string name="unk_api_error">Unknown API error</string>
	<string name="api_result_invalid">Invalid API response format.</string>
	<string name="domain_delete_confirmation_message">Pressing \'OK\' will delete the domain DOMAINNAME from the system and make all records for that domain inactive. There is no way to reverse this change without re-entering all domain data.</string>
	<string name="domains_group_select_label">Domain Group</string>
	<string name="domain_groups_loading_title">Loading domain groups list</string>
</resources>

