<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/red" android:visibility="visible">
	<ImageView android:id="@+id/dnsLogo" android:layout_width="fill_parent"
	    android:contentDescription="@string/dns_logo_description"
		android:layout_height="wrap_content" android:src="@drawable/dns_android_banner"
		android:layout_alignParentTop="true"></ImageView>
	<TextView android:layout_height="wrap_content"
		android:textColor="@color/white"
		android:layout_width="fill_parent" android:background="@color/dark_grey"
		android:padding="4dp" android:gravity="center_vertical|left"
		android:layout_below="@id/dnsLogo" android:id="@+id/dnsToolWhoisHeader" android:text="@string/dns_tool_whois_label"></TextView>
	<TextView android:layout_height="wrap_content" android:layout_below="@+id/dnsToolWhoisHeader" android:layout_alignParentLeft="true" android:layout_width="fill_parent" android:id="@+id/whoisDomainNameLabel" android:paddingBottom="2.0sp" android:paddingTop="2.0sp" android:paddingLeft="4.0sp" android:paddingRight="4.0sp" android:textColor="@color/white" android:text="@string/whois_domain_name_label"></TextView>
	<EditText android:layout_height="wrap_content" android:layout_below="@+id/whoisDomainNameLabel" android:layout_alignParentLeft="true" android:layout_width="wrap_content" android:id="@+id/whoisDomainInput" android:layout_toLeftOf="@+id/whoisButton" android:hint="@string/whois_domain_input_hint">
		<requestFocus></requestFocus>
	</EditText>
	<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/whoisDomainNameLabel" android:layout_alignParentRight="true" android:id="@+id/whoisButton" android:text="@string/whois_lookup_button"></Button>
	<FrameLayout android:layout_height="4dp" android:layout_below="@+id/whoisDomainInput" android:layout_alignParentLeft="true" android:layout_width="fill_parent" android:id="@+id/whoisDivider" android:background="@color/dark_grey"></FrameLayout>
	<ProgressBar android:layout_height="wrap_content" android:layout_width="wrap_content" style="?android:attr/progressBarStyleLarge" android:layout_below="@+id/whoisDivider" android:layout_marginTop="60dp" android:layout_centerInParent="true" android:layout_centerVertical="true" android:visibility="gone" android:id="@+id/whoisProgressBar"></ProgressBar>
	<ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/scrollView1" android:layout_below="@+id/whoisDivider" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:layout_alignParentRight="true">
		<LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:text="@string/ok" android:id="@+id/whoisResultTextArea" android:visibility="invisible" android:layout_height="fill_parent" android:layout_width="fill_parent" android:textColor="@color/dark_grey" android:background="@color/white"></TextView>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>
